Fix issue causing background image to cut off on bottom

--- a/src/style.css
+++ b/src/style.css
@@ -75,7 +75,7 @@ li:not(:last-child) {
 
 #content {
     background-image: url('./images/penguins.png');
-    background-size: cover;
+    background-size: 100% 100%;
     grid-column: 2;
     grid-row: 2;
     display: flex;
